Initial April Version

--- a/portfolio-7.html
+++ b/portfolio-7.html
@@ -2,8 +2,8 @@
     <div class="ajax-page-wrapper">
         <div class="ajax-page-nav">
             <div class="nav-item ajax-page-prev-next">
-                <a class="ajax-page-load" href="portfolio-3.html"><i class="zmdi zmdi-chevron-left"></i></a>
-                <a class="ajax-page-load" href="portfolio-5.html"><i class="zmdi zmdi-chevron-right"></i></a>
+                <a class="ajax-page-load" href="portfolio-6.html"><i class="zmdi zmdi-chevron-left"></i></a>
+                <a class="ajax-page-load" href="portfolio-8.html"><i class="zmdi zmdi-chevron-right"></i></a>
             </div>
             <div class="nav-item ajax-page-close-button">
                 <a id="ajax-page-close-button" href="#"><i class="zmdi zmdi-close"></i></a>
@@ -11,14 +11,14 @@
         </div>
 
         <div class="ajax-page-title">
-            <h1>Mari Deal</h1>
+            <h1>West Wind</h1>
         </div>
 
         <div class="row">
             <div class="col-sm-7 col-md-7 portfolio-block">
 
               <div class="portfolio-page-image">
-                <img src="images/portfolio/marideal.png" alt="">
+                <img src="images/portfolio/westwind.png" alt="">
             </div>
         </div>
 
@@ -28,11 +28,11 @@
                 <h3>Description</h3>
             </div>
             <ul class="project-general-info">
-                <li><p><i class="fa fa-user"></i> Team Size: 6</p></li>
-                <li><p><i class="fa fa-globe"></i> <a href="https://marideal.mu" target="_blank">www.marideal.mu</a></p></li>
+                <li><p><i class="fa fa-user"></i> Team Size: 3</p></li>
+                <li><p><i class="fa fa-globe"></i> <a href="https://westwind.in" target="_blank">www.westwind.in</a></p></li>
             </ul>
 
-            <p class="text-justify">The No.1 Booking website in Mauritius specializing in Hotel & Leisure Deals. Made exclusively for Mauritians & Residents. Best Price Guaranteed!</p>
+            <p class="text-justify">West Wind Concepts– the company that defines retail design today in India, started in New Delhi with its experience in the indusrty for over 30 years.</p>
             <!-- /Project Description -->
 
             <!-- Technology -->
@@ -41,7 +41,10 @@
                     <h3>Technology</h3>
                 </div>
                 <ul class="tags">
-                    <li><a>React Native</a></li>
+                    <li><a>HTML5</a></li>
+                    <li><a>CSS3</a></li>
+                    <li><a>jQuery</a></li>
+                    <li><a>Bootstrap</a></li>
                 </ul>
             </div>
             <!-- /Technology -->
