--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -11,90 +11,49 @@
         </div>
 
         <div class="ajax-page-title">
-            <h1>Portfolio Project 2</h1>
+            <h1>Guru Nanak College, Chennai</h1>
         </div>
 
         <div class="row">
             <div class="col-sm-7 col-md-7 portfolio-block">
-                <div class="owl-carousel portfolio-page-carousel">
-                    <div class="item">
-                        <img src="images/portfolio/full/2.jpg" alt="" />
-                    </div>
-                    <div class="item">
-                        <img src="images/portfolio/full/3.jpg" alt="" />
-                    </div>
-                    <div class="item">
-                        <img src="images/portfolio/full/4.jpg" alt="" />
-                    </div>
-                </div>
 
-                <div class="portfolio-page-video embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/97102654?autoplay=0"></iframe>
-                </div>
-
-                <!--
-                <div class="portfolio-page-image">
-                    <img src="images/portfolio/1.jpg" alt="">
-                </div>
-                -->
-
-                <script type="text/javascript">
-                    jQuery(document).ready(function($){
-
-                        $('.portfolio-page-carousel').owlCarousel({
-                            smartSpeed:1200,
-                            items: 1,
-                            loop: true,
-                            dots: true,
-                            nav: true,
-                            navText: false,
-                            margin: 10
-                        });
-
-                    });
-                </script>
-            </div>
-
-            <div class="col-sm-5 col-md-5 portfolio-block">
-                <!-- Project Description -->
-                <div class="block-title">
-                    <h3>Description</h3>
-                </div>
-                <ul class="project-general-info">
-                    <li><p><i class="fa fa-user"></i> Alex Smith</p></li>
-                    <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i> 25 december, 2016</p></li>
-                </ul>
-
-                <p class="text-justify">Aliquam euismod aliquam massa, quis eleifend dui sodales vitae. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-                <!-- /Project Description -->
-
-                <!-- Technology -->
-                <div class="tags-block">
-                    <div class="block-title">
-                        <h3>Technology</h3>
-                    </div>
-                    <ul class="tags">
-                        <li><a>HTML5</a></li>
-                        <li><a>CSS3</a></li>
-                        <li><a>jQuery</a></li>
-                        <li><a>Ajax</a></li>
-                        <li><a>PHP5</a></li>
-                    </ul>
-                </div>
-                <!-- /Technology -->
-
-                <!-- Share Buttons -->
-                <div class="btn-group share-buttons">
-                    <div class="block-title">
-                        <h3>Share</h3>
-                    </div>
-                    <a href="#" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>
-                    <a href="#" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>
-                    <a href="#" target="_blank" class="btn"><i class="fa fa-dribbble"></i> </a>
-                </div>
-                <!-- /Share Buttons -->
+              <div class="portfolio-page-image">
+                <img src="images/portfolio/gurunanakcollege.png" alt="">
             </div>
         </div>
+
+        <div class="col-sm-5 col-md-5 portfolio-block">
+            <!-- Project Description -->
+            <div class="block-title">
+                <h3>Description</h3>
+            </div>
+            <ul class="project-general-info">
+                <li><p><i class="fa fa-user"></i> Team Size: Single</p></li>
+                <li><p><i class="fa fa-globe"></i> <a href="https://gurunanakcollege.edu.in" target="_blank">www.gurunanakcollege.edu.in</a></p></li>
+            </ul>
+
+            <p class="text-justify">Gurunanak College is situated on the Velachery, Chennai, India with a playground maintained by India Cements. The Guru Nanak College was established in the year 1971 as a Unit of Guru Nanak Educational Society to mark the 500th birthday of the great mentor, Shri Guru Nanak Devji, the founder of Sikh religion</p>
+            <!-- /Project Description -->
+
+            <!-- Technology -->
+            <div class="tags-block">
+                <div class="block-title">
+                    <h3>Technology</h3>
+                </div>
+                <ul class="tags">
+                    <li><a>HTML5</a></li>
+                    <li><a>CSS3</a></li>
+                    <li><a>jQuery</a></li>
+                    <li><a>Bootstrap</a></li>
+                    <li><a>AJAX</a></li>
+                    <li><a>PHP</a></li>
+                    <li><a>Laravel</a></li>
+                    <li><a>MySQL</a></li>
+                </ul>
+            </div>
+            <!-- /Technology -->
+
+        </div>
     </div>
+</div>
 </div>
