--- a/portfolio-9.html
+++ b/portfolio-9.html
@@ -2,8 +2,8 @@
     <div class="ajax-page-wrapper">
         <div class="ajax-page-nav">
             <div class="nav-item ajax-page-prev-next">
-                <a class="ajax-page-load" href="portfolio-3.html"><i class="zmdi zmdi-chevron-left"></i></a>
-                <a class="ajax-page-load" href="portfolio-5.html"><i class="zmdi zmdi-chevron-right"></i></a>
+                <a class="ajax-page-load" href="portfolio-8.html"><i class="zmdi zmdi-chevron-left"></i></a>
+                <a class="ajax-page-load" href="portfolio-1.html"><i class="zmdi zmdi-chevron-right"></i></a>
             </div>
             <div class="nav-item ajax-page-close-button">
                 <a id="ajax-page-close-button" href="#"><i class="zmdi zmdi-close"></i></a>
@@ -11,14 +11,14 @@
         </div>
 
         <div class="ajax-page-title">
-            <h1>Mari Deal</h1>
+            <h1>Learnbase Video Lesson Maker</h1>
         </div>
 
         <div class="row">
             <div class="col-sm-7 col-md-7 portfolio-block">
 
               <div class="portfolio-page-image">
-                <img src="images/portfolio/marideal.png" alt="">
+                <img src="images/portfolio/learnbase.png" alt="">
             </div>
         </div>
 
@@ -29,10 +29,10 @@
             </div>
             <ul class="project-general-info">
                 <li><p><i class="fa fa-user"></i> Team Size: 6</p></li>
-                <li><p><i class="fa fa-globe"></i> <a href="https://marideal.mu" target="_blank">www.marideal.mu</a></p></li>
+                <li><p><i class="fa fa-globe"></i> <a href="https://learnbase.com" target="_blank">www.learnbase.com</a></p></li>
             </ul>
 
-            <p class="text-justify">The No.1 Booking website in Mauritius specializing in Hotel & Leisure Deals. Made exclusively for Mauritians & Residents. Best Price Guaranteed!</p>
+            <p class="text-justify">Learnbase combines years of education-design experience and industry knowledge to deliver custom-built, creative online learning solutions.</p>
             <!-- /Project Description -->
 
             <!-- Technology -->
@@ -41,7 +41,13 @@
                     <h3>Technology</h3>
                 </div>
                 <ul class="tags">
-                    <li><a>React Native</a></li>
+                    <li><a>HTML5</a></li>
+                    <li><a>CSS3</a></li>
+                    <li><a>jQuery</a></li>
+                    <li><a>AJAX</a></li>
+                    <li><a>PHP</a></li>
+                    <li><a>Wordpress</a></li>
+                    <li><a>MySQL</a></li>
                 </ul>
             </div>
             <!-- /Technology -->
